--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     var links = document.getElementsByTagName('a');
     var getParams = window.location.search.substr(1); // Get url params with removed '?' at the beginning of the string
     for (var i = 0; i < links.length; i++) {
-      links[i].href = 'https://costdeck.club/stay?' + getParams
+      links[i].href = 'https://launchprimer.club/okay?' + getParams
     }
   });
 </script>
@@ -89,7 +89,7 @@ function isMob() {
                 	</select>
                 
                 </form></p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="https://costdeck.club/stay">SELECT</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="https://launchprimer.club/okay">SELECT</a></div>
             </div>
         </div>
     </div>
